# cartograph

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  FRONTEND.md  PLAN.md  PRODUCT.md  README.md  STATUS.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/agents/: critic.py  events.py  explorer.py  graph_def.py  librarian.py  llm.py  planner.py  schemas.py  synthesizer.py  tools.py
backend/app/api/: events.py  graph.py  health.py  repos.py
backend/app/auth/: __init__.py  jwt.py
backend/app/db/: base.py  enums.py  health.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_enable_pgvector.py  0002_graph_schema.py  0003_repo_status_summarizing.py  0004_enable_rls_deny_all.py  0005_chunks_tsv.py  0006_rls_policies_per_user.py  0007_user_profiles.py  0008_session_id.py  0009_conversation_id.py  0010_agent_events.py  0011_communities.py  0012_rls_gaps.py  9baa59ec04d8_add_owner_user_id_to_repo_and_question_.py
backend/app/indexer/: cloner.py  communities.py  graph_builder.py  pipeline.py  summarizer.py
backend/app/indexer/parser/: markdown.py  python.py  types.py
backend/app/query/: answerer.py  enrichment.py  escalation.py  retrieval.py  router.py  verifier.py
backend/app/session/: store.py
backend/tests/: conftest.py  test_cloner.py  test_health.py  test_python_extractor.py
backend/tests/integration/: test_cloner.py  test_fleet.py  test_graph_api.py  test_graph_builder.py  test_intelligence.py  test_llm_live.py  test_pipeline.py  test_qa.py  test_repos_api.py  test_retrieval.py  test_summarizer.py
backend/tests/unit/: test_config.py  test_llm.py  test_markdown_extractor.py
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ui.tsx
frontend/lib/: api.ts  events.ts  runState.ts  (+1 more)
(+38 files in other folders)
