[project]
name = "cartograph"
version = "0.1.0"
description = "Watch AI agents map your codebase — multi-agent GraphRAG codebase intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "websockets>=14.1",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    # Indexing / parsing
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    # Graph algorithms
    "networkx>=3.4",
    "igraph>=0.11",
    "leidenalg>=0.10",
    # Retrieval
    "rank-bm25>=0.2.2",
    # LLM — Gemini (unified SDK)
    "google-genai>=1.0",
    # Utilities
    "httpx>=0.28",
    "tenacity>=9.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "aiosqlite>=0.20",          # fast in-memory DB tests where pgvector isn't needed
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, async
select = ["E", "F", "I", "B", "C4", "UP", "ASYNC", "BLE", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "network: tests that require network access (live git clone, API calls)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*"]
